fix: restore backlight bleed on pfd (#7346)

--- a/src/instruments/src/PFD/style.scss
+++ b/src/instruments/src/PFD/style.scss
@@ -254,13 +254,3 @@ text.Red {
 .HiddenElement {
   display: none;
 }
-
-.BacklightBleed {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 998;
-  opacity: 0.75;
-  background-color: rgba(0, 0, 255, 0.025);
-  box-shadow: inset 0px 0px 30px 10px rgba(0, 75, 255, 0.04);
-}
